# ipcamera-onvif-client

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  build_steps.md  config.ini.example  example.py  onvif_client.py  requirements.txt  test_onvif_client.py
cpp/: CMakeLists.txt
cpp/client/: IMPLEMENTATION_GUIDE.md
cpp/client/features/: device_management.feature
cpp/client/include/: soap_handler.h
cpp/client/src/: media_service.c
cpp/client/tests/: test_device_service.c
cpp/include/: http_client.h
cpp/server/: CMakeLists.txt  README.md  SERVER_IMPLEMENTATION_GUIDE.md  cucumber.yml
cpp/server/examples/: CMakeLists.txt  server_example.c
cpp/server/features/: server_authentication.feature  server_device_management.feature  server_media_service.feature  server_soap_handling.feature
cpp/server/features/step_definitions/: server_authentication.cpp  server_device_management.cpp
cpp/server/include/: auth_handler.h  device_service_handler.h  media_service_handler.h  onvif_server.h  soap_server_handler.h  soap_validator.h
cpp/server/src/: auth_handler.c  device_service_handler.c  media_service_handler.c  onvif_server.c  soap_server_handler.c
cpp/server/tests/: CMakeLists.txt  cucumber_runner.c
cpp/src/: onvif_client.c  soap_handler.c
cpp/tests/: CMakeLists.txt  cucumber_runner.c
examples/: CMakeLists.txt  onvif_example.c
features/: authentication.feature  media_service.feature  ptz_service.feature
include/: onvif_client.h
python/: validate.py
src/: auth.c  device_service.c  http_client.c  ptz_service.c
tests/: test_media_service.c  test_onvif_client.c
